--- a/packages/n/networkmanager-pptp/package.yml
+++ b/packages/n/networkmanager-pptp/package.yml
@@ -1,6 +1,6 @@
 name       : networkmanager-pptp
 version    : 1.2.8
-release    : 16
+release    : 17
 source     :
     - git|https://gitlab.gnome.org/GNOME/NetworkManager-pptp.git : 507cac516f9ca5e58855c596f7ec79385a96c2b7
 license    : GPL-2.0-or-later
@@ -11,9 +11,9 @@ description: |
 builddeps  :
     - pkgconfig(dbus-glib-1)
     - pkgconfig(gtk+-3.0)
+    - pkgconfig(libnma)
     - pkgconfig(libsecret-1)
     - pkgconfig(mm-glib)
-    - libnma-devel
     - ppp-devel
 rundeps    :
     - pptp
