seahorse-nautilus: Sync with git

--- a/packages/s/seahorse-nautilus/package.yml
+++ b/packages/s/seahorse-nautilus/package.yml
@@ -1,9 +1,9 @@
 name       : seahorse-nautilus
 version    : 3.11.92
-release    : 11
+release    : 12
 source     :
-    - git|https://gitlab.gnome.org/GNOME/seahorse-nautilus.git : 03d33bc03ddf3566da23b2cd6dea313b62749945
-license    : GPL-2.0
+    - git|https://gitlab.gnome.org/GNOME/seahorse-nautilus.git : eefcc38944ca2916f3d3cdb470c44cf83267d845
+license    : GPL-2.0-or-later
 component  : security.crypto
 summary    : Encryption extension for Nautilus
 description: |
