cutter: Update cutter to 2.0.0
Summary:
**Changelog:**
- Features
 - Support new Projects in Cutter that will allow saving and opening project files.
 - Add a command line flag for loading projects.
 - Improve the workflow of renaming functions, flags and more.
 - Improve the remote debug dialog.
 - Add reverse debugging support. (Note that debugging is still in a preview state).
 - Support trackpad pinch gesture.
 - Add comment column to multiple table views.
 - Add option for displaying basic block address at the start of each block in CFG.
 - Reworked disassembly arrow drawing.
 - Add a preview-on-hover functionality in disassembly widget.
- Bugfix
 - Resolve bug with line highlighting.

Full changelog [here](https://github.com/rizinorg/cutter/releases/tag/v2.0.0).

Depends on D10787.

Test Plan: Disassembled /bin/ls and checked Dashboard, Disassembly, Graph and Hexdump widgets.

Reviewers: #triage_team, JoshStrobl

Reviewed By: #triage_team, JoshStrobl

Subscribers: JoshStrobl

Differential Revision: https://dev.getsol.us/D10788

--- a/packages/c/cutter/package.yml
+++ b/packages/c/cutter/package.yml
@@ -1,31 +1,31 @@
 name       : cutter
-version    : 1.12.0
-release    : 12
+version    : 2.0.0
+release    : 13
 homepage   : https://cutter.re/
 source     :
-    - git|https://github.com/radareorg/cutter.git : v1.12.0
+    - git|https://github.com/rizinorg/cutter.git : v2.0.0
 license    : GPL-3.0-or-later
 component  : programming.tools
-summary    : A Qt and C++ GUI for radare2 reverse engineering framework
+summary    : A Qt and C++ GUI for rizin reverse engineering framework
 description: |
-    Cutter is a free and open-source GUI for radare2. Willing to create an advanced, customizable and free reverse engineering framework.
+    Cutter is a free and open-source GUI for rizin. Willing to create an advanced, customizable and free reverse engineering framework.
 patterns   :
     - devel :
         - /usr/lib64/Cutter/*.cmake
 builddeps  :
     - pkgconfig(Qt5Svg)
     - pkgconfig(Qt5UiTools)
-    - pkgconfig(libr)
+    - pkgconfig(libgvc)
+    - pkgconfig(librz)
     - pkgconfig(python3)
     - syntax-highlighting-devel
 setup      : |
     %patch -p1 < $pkgfiles/0001-Set-minimum-version-for-Python-interpreter.patch
     %cmake_ninja \
         -DCUTTER_ENABLE_PYTHON=ON \
-        -S ../src
+        -DCUTTER_USE_BUNDLED_RIZIN=OFF
 build      : |
     %ninja_build
 install    : |
     %ninja_install
-    install -Dm00644 src/org.radare.Cutter.appdata.xml $installdir/usr/share/metainfo/org.radare.Cutter.appdata.xml
-    ln -s /usr/bin/Cutter $installdir/usr/bin/cutter
+    install -Dm00644 src/re.rizin.cutter.appdata.xml $installdir/usr/share/metainfo/re.rizin.cutter.appdata.xml
