budgie-screensaver: Rename to budgie-screensaver and implement code for killing gjs' instance of ScreenSaver dbus name.

--- a/packages/b/budgie-screensaver/package.yml
+++ b/packages/b/budgie-screensaver/package.yml
@@ -1,15 +1,16 @@
-name       : gnome-screensaver
+name       : budgie-screensaver
 version    : 3.6.1
-release    : 15
+release    : 16
 source     :
-    - git|https://github.com/getsolus/budgie-screensaver.git : 01fc25dd4d5a72fb3e4174fcf52fdbc52627f0f7
+    - git|https://github.com/getsolus/budgie-screensaver.git : 5631e153e3cffb26cdabcec5925f9e2433ba23b3
 license    :
     - GPL-2.0-only
     - LGPL-2.0-only
+homepage   : https://github.com/getsolus/budgie-screensaver
 component  : desktop.gnome
-summary    : GNOME Screensaver
+summary    : Budgie Screensaver is a fork of gnome-screensaver intended for use with Budgie Desktop and is similar in purpose to other screensavers such as MATE Screensaver.
 description: |
-    gnome-screensaver is a screen saver and locker that aims to have simple, sane, secure defaults and be well integrated with the desktop.
+    Budgie Screensaver is a fork of gnome-screensaver intended for use with Budgie Desktop and is similar in purpose to other screensavers such as MATE Screensaver.
 builddeps  :
     - pkgconfig(dbus-glib-1)
     - pkgconfig(gnome-desktop-3.0)
@@ -18,6 +19,8 @@ builddeps  :
     - pkgconfig(libgnomekbdui)
     - pkgconfig(x11)
     - gnome-common
+replaces   :
+    - gnome-screensaver
 environment: |
     export CFLAGS="$CFLAGS -Wno-deprecated -Wno-deprecated-declarations"
 setup      : |
