budgie-desktop: Sync with git for budgie-screensaver rename.

--- a/packages/b/budgie-desktop/package.yml
+++ b/packages/b/budgie-desktop/package.yml
@@ -1,8 +1,8 @@
 name       : budgie-desktop
 version    : 10.5.2
-release    : 233
+release    : 234
 source     :
-    - git|https://github.com/solus-project/budgie-desktop.git : a636348eec52701b7b283de999069d953df5aa9f
+    - git|https://github.com/solus-project/budgie-desktop.git : 595760bded0c4179c2185fd5a0b910282415edfd
 license    :
     - GPL-2.0-only
     - LGPL-2.1-only
@@ -30,9 +30,9 @@ builddeps  :
     - sassc
 rundeps    :
     - budgie-desktop-view
+    - budgie-screensaver
     - gnome-session
     - gnome-settings-daemon
-    - gnome-screensaver
     - network-manager-applet
 setup      : |
     %meson_configure -Dwith-stateless=true
