--- a/packages/s/skopeo/package.yml
+++ b/packages/s/skopeo/package.yml
@@ -1,13 +1,13 @@
 name       : skopeo
-version    : 1.2.2
-release    : 12
+version    : 1.2.3
+release    : 13
 source     :
-    - git|https://github.com/containers/skopeo : v1.2.2
+    - git|https://github.com/containers/skopeo : v1.2.3
     # we need these extra sources so we can grab configs to package them
     # these are vendored with skopeo but are missing configs we need
-    - git|https://github.com/containers/image : v5.10.2
-    - git|https://github.com/containers/storage : v1.26.0
-    - git|https://github.com/containers/common : v0.34.0
+    - git|https://github.com/containers/image : v5.11.0
+    - git|https://github.com/containers/storage : v1.29.0
+    - git|https://github.com/containers/common : v0.36.0
 license    : Apache-2.0
 component  : virt
 summary    : Work with remote OCI images registries - retrieving information, images, signing content
@@ -19,16 +19,18 @@ builddeps  :
     - btrfs-progs-devel
     - golang
     - go-md2man
+setup      : |
+    # This is only temporary until next release where it's fixed
+    %patch -p1 < $pkgfiles/makefile.patch
 build      : |
     %make bin/skopeo
     %make docs
 install    : |
-    %make_install
+    %make_install PREFIX="%PREFIX%"
 
     install -m644 $sources/storage.git/storage.conf -t "$installdir/etc/containers/"
     install -m644 $sources/image.git/registries.conf -t "$installdir/etc/containers/"
     install -m644 $sources/common.git/pkg/config/containers.conf -t "$installdir/etc/containers/"
-    %patch -d $installdir/etc/containers/ < $pkgfiles/storage.conf.patch
     %patch -d $installdir/etc/containers/ < $pkgfiles/registries.conf.patch
     %patch -d $installdir/etc/containers/ < $pkgfiles/containers.conf.patch
 
