--- a/packages/b/buildah/package.yml
+++ b/packages/b/buildah/package.yml
@@ -1,8 +1,8 @@
 name       : buildah
-version    : 1.19.8
-release    : 24
+version    : 1.20.1
+release    : 25
 source     :
-    - git|https://github.com/containers/buildah : v1.19.8
+    - git|https://github.com/containers/buildah : v1.20.1
 license    : Apache-2.0
 homepage   : https://buildah.io/
 component  : virt
@@ -32,6 +32,8 @@ rundeps    :
 environment: |
     export CGO_CFLAGS="$CFLAGS"
     export GOFLAGS="-trimpath"
+setup      : |
+    %patch -p1 < $pkgfiles/0001-Do-not-force-hard-code-to-crun-in-rootless-mode.patch
 build      : |
     %make
 install    : |
