pytorch: Disable AVX2 temporarily to determine whether illegal instructions are being run on the buildserver

--- a/packages/py/pytorch/package.yml
+++ b/packages/py/pytorch/package.yml
@@ -1,6 +1,6 @@
 name       : pytorch
 version    : 1.8.1
-release    : 8
+release    : 9
 source     :
     - git|https://github.com/pytorch/pytorch : v1.8.1
 license    : BSD-3-Clause
@@ -13,14 +13,14 @@ summary    :
 description: |
     PyTorch is an optimized tensor library for deep learning using GPUs and CPUs.
 patterns   :
-    - ^libtorch:
+    - ^libtorch :
         - /usr/lib64
-    - ^libtorch-devel:
+    - ^libtorch-devel :
         - /usr/lib64/cmake
         - /usr/include
 optimize   :
     - speed
-avx2       : yes
+#avx2       : yes
 clang      : yes
 builddeps  :
     - pkgconfig(eigen3)
