gnome-system-monitor: Fix headerbar not being applied as titlebar

--- a/packages/g/gnome-system-monitor/package.yml
+++ b/packages/g/gnome-system-monitor/package.yml
@@ -1,6 +1,6 @@
 name       : gnome-system-monitor
 version    : '40.0'
-release    : 19
+release    : 20
 source     :
     - git|https://gitlab.gnome.org/GNOME/gnome-system-monitor : d4da0b068eae0a62b2f1d765f9f0593f3f1b5869
 license    : GPL-2.0-only
@@ -17,6 +17,7 @@ builddeps  :
     - itstool
 setup      : |
     %patch -p1 < $pkgfiles/0001-Revert-use-of-libhandy.patch
+    %patch -p1 < $pkgfiles/0001-Ensure-headerbar-is-set-as-the-titlebar.patch
     %meson_configure -Dwnck=true
 build      : |
     %ninja_build
