signal-desktop: Update to 5.1.0
**Changelog:**

- Significant performance improvements will help you fly through your message backlog after your flight lands, or quickly power through what you missed while you were looking for a power outlet.
- Forward messages between threads. Editing support lets you amend, extend, append, explain what you intend, or tie up loose ends before you hit send.
- Message reaction icons are no longer cropped at small widths.

Resolves T9581.

--- a/packages/s/signal-desktop/package.yml
+++ b/packages/s/signal-desktop/package.yml
@@ -1,12 +1,11 @@
 name       : signal-desktop
-version    : 1.39.6
-release    : 64
+version    : 5.1.0
+release    : 65
 source     :
-    - git|https://github.com/signalapp/Signal-Desktop.git : v1.39.6
+    - git|https://github.com/signalapp/Signal-Desktop.git : v5.1.0
 license    : GPL-3.0-or-later
 component  : network.im
-summary    : Signal Desktop is an Electron application that links with your Signal
-    Android or Signal iOS app
+summary    : Signal Desktop is an Electron application that links with your Signal Android or Signal iOS app
 description: |
     Signal Desktop is an Electron application that links with your Signal Android or Signal iOS app.
 networking : yes
@@ -16,10 +15,12 @@ builddeps  :
     - pkgconfig(gtk+-3.0)
     - pkgconfig(xscrnsaver)
     - cups-devel
+    - git-lfs
     - yarn
 setup      : |
-    %patch -p1 < $pkgfiles/0001-Ensure-electron-builder-runs-in-dir-and-fix-engine-c.patch
-    yarn install --ignore-engines # Ignore Engines not actually working here...
+    %patch -p1 < $pkgfiles/0001-Ensure-electrion-builder-runs-in-dir-and-remove-engi.patch
+    git lfs install
+    yarn install --frozen-lockfile
 build      : |
     # Use npm directly since Signal opted to randomly remove the handy pack-prod.
     export SIGNAL_ENV=production
