qt5-declarative: Sync with KDE-QT
**Changelog:**
- Support ' in styled text

--- a/packages/q/qt5-declarative/package.yml
+++ b/packages/q/qt5-declarative/package.yml
@@ -1,8 +1,8 @@
 name       : qt5-declarative
 version    : 5.15.3
-release    : 30
+release    : 31
 source     :
-    - git|https://invent.kde.org/qt/qt/qtdeclarative.git : 4f08a2da5b0da675cf6a75683a43a106f5a1e7b8
+    - git|https://invent.kde.org/qt/qt/qtdeclarative.git : 0dda47d9f1a22567ad8f1266be2f0cd8a9226c7f
 homepage   : https://www.qt.io
 license    :
     - LGPL-3.0-or-later
@@ -27,4 +27,4 @@ setup      : |
 build      : |
     %make
 install    : |
-    %make_install INSTALL_ROOT=$installdir -j1
+    %make_install INSTALL_ROOT=$installdir
