--- a/packages/b/buildah/package.yml
+++ b/packages/b/buildah/package.yml
@@ -1,12 +1,13 @@
 name       : buildah
 version    : 1.20.1
-release    : 25
+release    : 26
 source     :
     - git|https://github.com/containers/buildah : v1.20.1
 license    : Apache-2.0
 homepage   : https://buildah.io/
 component  : virt
-summary    : A tool that facilitates building Open Container Initiative (OCI) container images
+summary    : A tool that facilitates building Open Container Initiative (OCI) container
+    images
 description: |
     The Buildah package provides a command line tool that can be used to
     - create a working container, either from scratch or using an image as a starting point
