--- a/packages/l/libnvidia-container/package.yml
+++ b/packages/l/libnvidia-container/package.yml
@@ -1,8 +1,8 @@
 name       : libnvidia-container
-version    : 1.3.3
-release    : 6
+version    : 1.4.0
+release    : 7
 source     :
-    - git|https://github.com/NVIDIA/libnvidia-container : v1.3.3
+    - git|https://github.com/NVIDIA/libnvidia-container : v1.4.0
 license    : Apache-2.0
 component  : programming.library
 networking : yes
@@ -18,14 +18,13 @@ builddeps  :
     - pkgconfig(libelf)
     - pkgconfig(libseccomp)
     - pkgconfig(libtirpc)
+    - rpcsvc-proto-devel
 setup      : |
-    %patch -p1 < $pkgfiles/use_system_libtirpc.patch
+    %patch -p1 < $pkgfiles/0001-Fix-RPC-and-libtirpc-flags.patch
 build      : |
     %make
 install    : |
     %make_install prefix=%PREFIX% libdir=%libdir%
 
-    rm -v $installdir/usr/include/nvidia-modprobe-utils.h
-    rm -v $installdir/usr/include/pci-enum.h
     rm -v $installdir/%libdir%/lib*.a
     rm -rv $installdir/usr/share
