skopeo: Rebuild against toolchain

--- a/packages/s/skopeo/package.yml
+++ b/packages/s/skopeo/package.yml
@@ -1,6 +1,6 @@
 name       : skopeo
 version    : 1.2.3
-release    : 13
+release    : 14
 source     :
     - git|https://github.com/containers/skopeo : v1.2.3
     # we need these extra sources so we can grab configs to package them
@@ -10,7 +10,8 @@ source     :
     - git|https://github.com/containers/common : v0.36.0
 license    : Apache-2.0
 component  : virt
-summary    : Work with remote OCI images registries - retrieving information, images, signing content
+summary    : Work with remote OCI images registries - retrieving information, images,
+    signing content
 description: |
     Skopeo works with API V2 registries such as Docker registries, the Atomic registry, private registries, local directories and local OCI-layout directories. Skopeo does not require a daemon to be running to perform these operations.
 builddeps  :
