--- a/packages/s/supercollider/package.yml
+++ b/packages/s/supercollider/package.yml
@@ -1,11 +1,12 @@
 name       : supercollider
 version    : 3.11.2
-release    : 6
+release    : 7
 source     :
     - git|https://github.com/supercollider/supercollider : Version-3.11.2
 license    : GPL-3.0-or-later
 component  : multimedia.audio
-summary    : An audio server, programming language, and IDE for sound synthesis and algorithmic composition
+summary    : An audio server, programming language, and IDE for sound synthesis and
+    algorithmic composition
 description: |
     An audio server, programming language, and IDE for sound synthesis and algorithmic composition
 builddeps  :
