libreoffice: Ensure precompiled headers are enabled for the next rebuild
Should speed things up quite a bit moving forward.

--- a/packages/l/libreoffice/package.yml
+++ b/packages/l/libreoffice/package.yml
@@ -321,6 +321,7 @@ setup      : |
                  --enable-kf5                \
                  --enable-postgresql-sdbc    \
                  --enable-python=system      \
+                 --enable-pch=full           \
                  --enable-release-build      \
                  --libdir=/usr/lib64         \
                  --libexecdir=/usr/lib64/libreoffice          \
