--- a/packages/x/xorg-driver-video-intel/package.yml
+++ b/packages/x/xorg-driver-video-intel/package.yml
@@ -1,6 +1,6 @@
 name       : xorg-driver-video-intel
 version    : 2.99.917
-release    : 40
+release    : 41
 source     :
     - git|https://gitlab.freedesktop.org/xorg/driver/xf86-video-intel.git : 25c9a2fcc83ae7252a178b42262da383e59df744
 license    : MIT
@@ -21,6 +21,8 @@ builddeps  :
     - pkgconfig(xproto)
     - pkgconfig(xcb-aux)
     - pkgconfig(xorg-macros)
+environment: |
+    export CFLAGS="${CFLAGS} -fcommon"
 setup      : |
     %reconfigure --with-default-accel=sna \
                --enable-uxa \
